# aws-sdk-wasi-example

./: Cargo.toml  README.md  main.ts  package-lock.json  package.json
js-bindings/: aws_sdk_wasi_example.core2.wasm  aws_sdk_wasi_example.d.ts  aws_sdk_wasi_example.js
js-bindings/interfaces/: component-aws-sdk-wasi-example-data-uploader.d.ts  wasi-clocks-monotonic-clock.d.ts  wasi-filesystem-types.d.ts  wasi-http-outgoing-handler.d.ts  wasi-http-types.d.ts
src/: bindings.rs  lib.rs
wit/: world.wit
