[package]
name = "aws-sdk-wasi-example"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }
aws-sdk-s3 = {version = "1", default-features = false}
aws-sdk-dynamodb = {version = "1", default-features = false}
aws-config = {version = "1", default-features = false}
aws-smithy-async = { version = "1", default-features = false, features = ["rt-tokio"]}
aws-smithy-wasm = "0.1.4"
tokio = { version = "1.45.0", features = ["macros", "rt", "time"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:aws-sdk-wasi-example"

[package.metadata.component.dependencies]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
